--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "astro": "^4.14.5",
     "swiper": "^11.1.10",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.4"
+    "typescript": "^5.4.4",
+    "vercel": "^37.2.1"
   }
 }
